* Removed the MapToDTO manual code and added the ModelMapper dependency for clean code. * Optimized the code with latest.